# xnes

./: .gitignore  404.html  AGENTS.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check.yml  ci.yml  pages.yml
data/: params.json
docs/: faq.md  guide.md  index.md  integration.md  principles.md  quickstart.md
docs/reference/: api.md
examples/: Dockerfile  compose.yaml  integration.py  sc2_bot.py  snippet.py  train_sc2_bot.py  utils.py
examples/data/: history.json  params.json
faq/: index.html
guide/: index.html
idea/: create_docs.md
idea/done/: setup.md
leitwerk/: __init__.py  optimizer.py  scheduler.py  session.py  state.py  xnes.py
leitwerk/schema/: __init__.py  common.py  dataclass.py  mapping.py  parameter.py  parser.py  spec.py  transforms.py
notebooks/: benchmark.ipynb  hyperparameter_tuning.ipynb  workbench.ipynb
principles/: index.html
reference/api/: index.html
search/: search_index.json
src/: __init__.py  optimizer.py  xnes.py
test/: test_invariance.py  test_optimizer.py
tests/: _optimizer_helpers.py  test_invariance.py  test_optimizer.py  test_optimizer_context.py  test_optimizer_optimization.py  test_optimizer_schema.py  test_optimizer_state.py  test_session.py  test_xnes.py
xnes/: __init__.py  _scheduler.py  optimizer.py  scheduler.py  schema.py  xnes.py
xnes/schema/: common.py  dataclass.py  mapping.py  spec.py
