[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leitwerk"
version = "0.7.0"
description = "Evolutionary strategy with file persistence and schema reconciliation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
  "burnysc2>=7.1.3",
  "matplotlib (>=3.10.8,<4.0.0)",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.11",
  "scipy-stubs>=1.15",
]
docs = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-autorefs>=1.0",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.26",
]
benchmark = [
  "cma>=4.4.4,<5.0.0",
  "coco-experiment>=2.8.2,<3.0.0",
  "cocopp>=2.8.2,<3.0.0",
  "pandas>=3.0.1,<4.0.0",
  "tqdm (>=4.67.3,<5.0.0)",
]

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
include = ["leitwerk*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
leitwerk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["leitwerk", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["leitwerk", "tests"]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
ignore_missing_imports = true

